--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,43 @@
+:root {
+    --color-white: #FFF;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+}
+
+html, body {
+    background-color: #000000;
+}
+
+.nav-container {
+    height: 80px;
+    background-color: #ff8400;
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+}
+
+.nav-main {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-main h1 {
+    color: var(--color-white);
+    font-size: 36px;
+}
+
+.contact-link {
+    font-size: 18px;
+    cursor: pointer;
+    color: var(--color-white);
 }
