--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 :root {
-    --color-white: #FFF;
+    --color-white: #fff;
+    --color-black: #000000;
+    --color-orange: #ff8400;
+    --color-gray: #333;
+    --color-light-gray: #c9c9c9;
+    --color-red-light: #faa;
 }
 
 * {
@@ -10,12 +15,12 @@
 }
 
 html, body {
-    background-color: #000000;
+    background-color: var(--color-black);
 }
 
 .nav-container {
     height: 80px;
-    background-color: #ff8400;
+    background-color: var(--color-orange);
     width: 100%;
     padding: 0 20px;
     display: flex;
@@ -40,4 +45,48 @@ html, body {
     font-size: 18px;
     cursor: pointer;
     color: var(--color-white);
+}
+
+.form-container {
+    width: 100%;
+    padding: 40px 20px;
+}
+
+.card-form {
+    background-color: var(--color-gray);
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.form-control {
+    margin-bottom: 20px;
+}
+
+.form-control label {
+    display: none;
+}
+
+.error-message {
+    margin-top: 5px;
+    color: var(--color-red-light);
+}
+
+.form-input {
+    height: 50px;
+    width: 100%;
+    border-radius: 4px;
+    padding: 0 20px;
+    font-size: 14px;
+    border: 0;
+}
+
+.form-input::placeholder {
+    color: var(--color-light-gray);
+}
+
+.form-input:disabled {
+    background-color: #ddd;
 }
