--- a/css/styles.css
+++ b/css/styles.css
@@ -90,3 +90,28 @@ html, body {
 .form-input:disabled {
     background-color: #ddd;
 }
+
+.btn-container {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.btn {
+    width: 250px;
+    height: 50px;
+    background-color: var(--color-orange);
+    border: 0;
+    border-radius: 4px;
+    color: var(--color-white);
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.btn-left {
+    margin-right: 10px;
+}
+
+.btn-right {
+    margin-left: 10px;
+}
